--- a/figma3/css/style.css
+++ b/figma3/css/style.css
@@ -52,7 +52,7 @@ table {
   border-spacing: 0;
 }
 
-.secondSection .secondSection_rowContainer .secondSection__littleContainer {
+.footer_copyright, .footer__phonestable, .footer__smalltable, .footer__Logotable, .secondSection .secondSection_rowContainer .secondSection__littleContainer {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -76,6 +76,7 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  overflow-x: hidden;
 }
 
 .main {
@@ -447,8 +448,8 @@ body {
   height: 56px;
   color: #EB008C;
   border: 2px solid #EB008C;
-  margin-top: 36px;
   margin-left: 30px;
+  margin-top: 36px;
   border-radius: 8px;
 }
 .secondSection .secondSection_rowContainer .secondSection__littleContainer .p__icon {
@@ -468,6 +469,22 @@ body {
   gap: 20px;
   margin-top: 36px;
   margin-left: 30px;
+}
+.secondSection .secondSection_rowContainer .secondSection__littleContainer .littleContainer__buttonContainer .buttonContainer__button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 210px;
+  height: 56px;
+  color: #EB008C;
+  border: 2px solid #EB008C;
+  border-radius: 8px;
 }
 .secondSection .secondSection_rowContainer .secondSection__littleContainer .littleContainer__buttonContainer .buttonContainer__text {
   font-size: 16px;
@@ -653,5 +670,113 @@ body {
   height: 336.24px;
   margin-top: 159.28px;
   margin-left: 727.57px;
+}
+
+.footer_copyright, .footer__phonestable, .footer__smalltable, .footer__Logotable, .secondSection .secondSection_rowContainer .secondSection__littleContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  width: 1920px;
+  height: 292px;
+  border-top: gray 2px solid;
+  margin-top: 80px;
+}
+
+.footer__Logotable {
+  width: 500px;
+}
+.footer__Logotable .Logotable__text {
+  font-size: 36px;
+  font-weight: 500;
+  margin-top: 60px;
+  margin-left: 50px;
+}
+.footer__Logotable .Logotable__LogoContainer {
+  margin-left: 50px;
+  margin-top: 66px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  gap: 2px;
+  height: 20px;
+}
+.footer__Logotable .Logotable__LogoContainer .Logo_latter {
+  width: 20px;
+  height: 20px;
+}
+.footer__Logotable .Logotable__LogoContainer .Logo_vector1 {
+  position: absolute;
+  margin-left: 125px;
+}
+.footer__Logotable .Logotable__LogoContainer .Logo_vector2 {
+  position: absolute;
+  margin-left: 125px;
+  margin-top: -24px;
+}
+
+.footer__smalltable {
+  gap: 20px;
+  width: 255px;
+  position: relative;
+}
+.footer__smalltable .smalltable__text {
+  font-size: 20px;
+  font-weight: 500;
+}
+.footer__smalltable .smalltable__text--first {
+  margin-top: 60px;
+}
+
+.footer__phonestable {
+  gap: 20px;
+  width: 652px;
+}
+.footer__phonestable .phonestable__text {
+  font-size: 20px;
+  font-weight: 500;
+}
+.footer__phonestable .phonestable__text--first {
+  margin-top: 60px;
+}
+
+.footer_copyright {
+  gap: 16px;
+  width: 500px;
+}
+.footer_copyright .copyright__text {
+  font-size: 20px;
+  font-weight: 500;
+}
+.footer_copyright .copyright__text--first {
+  margin-top: 60px;
+}
+.footer_copyright .copyright__phone {
+  font-size: 36px;
+  font-weight: 500;
+}
+.footer_copyright .copyright__text--last {
+  margin-top: 56px;
+}
+
+.footer__blueText {
+  color: #0000BE;
 }
 /*# sourceMappingURL=style.css.map */
