--- a/figma1/scss/media.scss
+++ b/figma1/scss/media.scss
@@ -1,199 +1,139 @@
-
-
 @media (max-width: 768px){
-    .firstSection
-    {
-    .firstSection_h{
-        font-size: 72px;
-        font-weight: 300;
-
-        margin-left: 33px;
-        margin-top: 72px;
+    .firstSection {
+        .firstSection_h {
+            font-size: 72px;
+            font-weight: 300;
+            margin-left: 33px;
+            margin-top: 72px;
+        }
+        .firstSection_p {
+            max-width: 635px;
+            margin-left: 39px;
+            margin-top: 0;
+        }
+        .firstSection_button {
+            margin-left: 39px;
+            margin-top: 16px;
+            margin-bottom: 64px;
+        }
     }
-    .firstSection_p
-    {
-        min-width: 58px ;
-
-        min-width: auto;
-        max-width: 635px;
-
-        margin-left: 39px;
-        margin-top: 0;
-    }
-    .firstSection_button
-    {
-        margin-left: 39px;
-        margin-top: 16px;
-        margin-bottom: 64px;
-    }
-}
 }
 
 @media (max-width: 500px){
-    .firstSection
-    {
-    .firstSection_h{
-        font-size: 48px;
-        font-weight: 300;
-
-        margin-left: 30px;
-        margin-top: 32px;
+    .firstSection {
+        .firstSection_h {
+            font-size: 48px;
+            font-weight: 300;
+            margin-left: 30px;
+            margin-top: 32px;
+        }
+        .firstSection_p {
+            max-width: 273px;
+            margin-left: 31px;
+            margin-top: 8px;
+        }
+        .firstSection_button {
+            margin-left: 31px;
+            margin-top: 16px;
+            margin-bottom: 48px;
+        }
     }
-    .firstSection_p
-    {
-        min-width: 58px ;
-
-        min-width: auto;
-        max-width: 273px;
-
-        margin-left: 31px;
-        margin-top: 8px;
-    }
-    .firstSection_button
-    {
-        margin-left: 31px;
-        margin-top: 16px;
-        margin-bottom: 48px;
-    }
-}
 }
 
 @media (max-width: 500px){
-    .cardsСontainer{
+    .cardsСontainer {
         flex-direction: column !important;
     }
 }
 
 @media (max-width: 768px){
-    .card_left
-{
-    margin-left: 39px;
-}
-}
-@media (max-width: 500px){
-    .card_left
-{
-    margin-left: 16px;
-}
+    .card_left {
+        margin-left: 39px;
+    }
 }
 
-@media (max-width: 768x){
-    .cardsContainer_card{
+@media (max-width: 500px){
+    .card_left {
+        margin-left: 16px;
+    }
+}
+
+@media (max-width: 768px){
+    .cardsContainer_card {
         max-width: 390px;
 
-
-        .card_first
-        {
-            margin-bottom: 20px;
-        }
-        .card_first_text
-        {
-            margin-left: 20px;
-        }
-        .card_H
-        {
-            margin-bottom: 12px;
-            margin-left: 20px;
-        }
-        .card_info
-        {
-            margin-bottom: 6px;
-            margin-left: 20px;
-        }
-        .card_button
-        {
-            margin-bottom: 20px;
-            margin-left: 20px;
-        }
+        .card_first { margin-bottom: 20px; }
+        .card_first_text { margin-left: 20px; }
+        .card_H { margin-bottom: 12px; margin-left: 20px; }
+        .card_info { margin-bottom: 6px; margin-left: 20px; }
+        .card_button { margin-bottom: 20px; margin-left: 20px; }
     }
 }
+
 @media (max-width: 500px){
-    .cardsContainer_card{
+    .cardsContainer_card {
         max-width: 288px;
         max-height: 273px;
-    
 
-        .card_first
-        {
-            margin-bottom: 20px;
-        }
-        .card_first_text
-        {
-            margin-left: 20px;
-        }
-        .card_H
-        {
-            margin-bottom: 12px;
-            margin-left: 20px;
-        }
-        .card_info
-        {
-            margin-bottom: 26px;
-            margin-left: 20px;
-        }
-        .card_button
-        {
-            margin-bottom: 29px;
-            margin-left: 20px;
-        }
+        .card_first { margin-bottom: 20px; }
+        .card_first_text { margin-left: 20px; }
+        .card_H { margin-bottom: 12px; margin-left: 20px; }
+        .card_info { margin-bottom: 26px; margin-left: 20px; }
+        .card_button { margin-bottom: 29px; margin-left: 20px; }
     }
 }
-@media (max-width: 768x){
-    .cardsContainer_card_two{
+
+@media (max-width: 768px){
+    .cardsContainer_card_two {
         max-width: 270px;
         max-height: 180px;
     }
 }
+
 @media (max-width: 500px){
-    .cardsContainer_card_two{
+    .cardsContainer_card_two {
         max-width: 288px;
         max-height: 165px;
     }
 }
 
-@media (max-width: 768x){
-    .grid{
+@media (max-width: 768px){
+    .grid {
         grid-template-columns: 273px 115px 168px 137px;
         grid-auto-rows: 62px;
-
         margin-left: 39px;
         margin-bottom: 64px;
     }
-    .grid_item_text
-    {
+    .grid_item_text {
         margin-left: 12px !important;
     }
 }
+
 @media (max-width: 500px){
-    .grid{
+    .grid {
         grid-template-columns: 154px 100px 168px 122px;
         grid-auto-rows: 123px;
-
         margin-left: 0px;
         margin-bottom: 71px;
         overflow-x: auto;
     }
-    .grid_item_text
-    {
+    .grid_item_text {
         margin-left: 11px !important;
     }
 }
 
-@media (max-width: 768x){
-    .footer
-{
-    .footer_text
-    {
-        margin-left: 55px;
+@media (max-width: 768px){
+    .footer {
+        .footer_text {
+            margin-left: 55px;
+        }
     }
 }
-}
+
 @media (max-width: 500px){
-    .footer
-{
-    .footer_text
-    {
-        margin-left: 39px;
+    .footer {
+        .footer_text {
+            margin-left: 39px;
+        }
     }
-}
 }
