--- a/figma2/css/styles.css
+++ b/figma2/css/styles.css
@@ -25,7 +25,6 @@ select {
 }
 
 img {
-  vertical-align: middle;
   max-width: 100%;
   height: auto;
   display: block;
@@ -50,6 +49,10 @@ input, button, textarea, select {
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+
+html {
+  overflow-x: hidden;
 }
 
 .body {
